# api

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  todo.md
api/: main.py  settings.py
apiserver/: README.md  go.mod  go.sum  main.go
apiserver/internal/: config.go  routes.go  server.go  token.go  token_test.go
apiserver/internal/igdb/: api.go  api_test.go  const_test.go  igdbConfig.go  token.go  token_test.go
apiserver/pkg/: types.go
deploy/: Dockerfile  Dockerfile.old
httpie/: README.md  get-api-v1-hello.sh  get-slash.sh  get.sh
httpie/igdb/: get-cover.sh  get-game.sh  get-token.sh  search.sh
js/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js
js/src/: App.jsx  app.jsx  auth.js  container.js  main.jsx  navbar.jsx
js/src/components/: game.jsx  navbar.jsx  playlist.jsx
js/src/pages/: login.jsx  test-button.jsx
