[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Emi Grant <teamuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
gunicorn = "^21.2.0"
supertokens-python = "^0.18.5"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
